UCSFD8-82 fixing background shift on hover

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -268,10 +268,12 @@ a {
 .full-width-page-banner__header a.link--cta,
 .promo-list__card-two .link--cta {
   display: inline-block;
-  background-image: url("../images/cta-arrow.svg");
-  background-position: right center;
+  background-image: url("../images//cta-arrow.svg");
   background-repeat: no-repeat;
   background-color: transparent;
+  background-size: 14px 14px;
+  padding-right: 24px;
+  background-position: right center;
   background-size: 14px 10px;
   padding-right: 24px;
   text-decoration: none;
@@ -7222,19 +7224,18 @@ a[href*="http"] .article-header__date {
   text-decoration: none; }
   .page-node-type-map .poi-info-window .view-link a {
     text-decoration: none;
-    display: inline-block;
-    -webkit-transition: .2s ease-out background-position;
-    transition: .2s ease-out background-position;
-    background-image: url("../images/cta-arrow.svg");
-    background-position: 96% 60%;
+    background-image: url("../images//cta-arrow.svg");
     background-repeat: no-repeat;
     background-color: transparent;
     background-size: 14px 14px;
     padding-right: 24px;
+    background-position: 98% 60%;
+    -webkit-transition: 0.15s cubic-bezier(0.33, 0.66, 0.66, 1) background-position;
+    transition: 0.15s cubic-bezier(0.33, 0.66, 0.66, 1) background-position;
+    display: inline-block;
     font-family: "HelveticaNeueLTW04-65Medium", "HelveticaNeue", "Helvetica", "Arial", sans-serif;
     margin-bottom: 21px !important;
-    background-size: 14px 10px;
-    background-position: 98% 60%; }
+    background-size: 14px 10px; }
     .page-node-type-map .poi-info-window .view-link a:link {
       color: #0071ad; }
     .page-node-type-map .poi-info-window .view-link a:visited, .page-node-type-map .poi-info-window .view-link a:link:visited {
@@ -8688,9 +8689,20 @@ a[href*="http"] .article-header__date {
         color: #fff;
         text-decoration: underline; }
     .promo-list__card .promo-list__card-more .link--cta {
-      background: url("/themes/custom/ucsf/assets/images/cta-arrow-white.svg") no-repeat right center transparent;
+      background-image: url("../images//cta-arrow-white.svg");
+      background-repeat: no-repeat;
+      background-color: transparent;
+      background-size: 14px 14px;
+      padding-right: 24px;
+      background-position: 98% 60%;
+      -webkit-transition: 0.15s cubic-bezier(0.33, 0.66, 0.66, 1) background-position;
+      transition: 0.15s cubic-bezier(0.33, 0.66, 0.66, 1) background-position;
       background-size: 14px 10px;
       color: #fff; }
+      .promo-list__card .promo-list__card-more .link--cta:hover {
+        background-position: 100% 60%; }
+      .promo-list__card .promo-list__card-more .link--cta:hover {
+        padding-right: 24px; }
   .promo-list__card .promo-list__card-title {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
