--- a/docroot/themes/custom/ucsf/scss/tools/_variables.scss
+++ b/docroot/themes/custom/ucsf/scss/tools/_variables.scss
@@ -187,7 +187,7 @@ $z-news-search-filter: 1100;
 
 // Animation transitions
 //------------------------------------------------------------------------------
-
+$transition-type: cubic-bezier(0.33,0.66,0.66,1);
 $transition-time: .3s;
 $transition-time-short: .2s;
 $transition-time-long: .5s;
